<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"


    android:orientation="vertical"
    android:background="@color/grey"
    >

    <ImageView
        android:id="@+id/detailPoster_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:src="@drawable/no_poster"/>

    <LinearLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/movie_detail_title"
            android:textColor="@color/color_primary"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="@color/black"
            android:layout_weight="2"
            android:padding="5dp"


            android:textSize="16sp" />

        <TextView
            android:text="@string/movie_detail_release"
            android:textSize="16sp"
            android:layout_weight="2"
            android:padding="5dp"
            android:textAllCaps="true"
            android:fontFamily="san"
            android:gravity="right"

            android:textStyle="bold"
            android:textColor="@color/color_primary"
            android:background="@color/black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movie_title_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/light_black"
            android:layout_weight="2"
            android:padding="5dp"


            android:textSize="16sp" />

        <TextView
            android:id="@+id/movie_release_view"
            android:text="Relese"
            android:textSize="16sp"
            android:layout_weight="2"
            android:padding="5dp"

            android:fontFamily="san"
            android:gravity="right"


            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/light_black"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/movie_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:background="@color/black"
            android:textColor="@color/color_primary"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/movie_overview_view"
            android:text="@string/movie_detail_no_description"
            android:textColor="@color/white"
            android:background="@color/light_black"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <RatingBar
            android:id="@+id/movieRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:background="@color/black"


            android:isIndicator="true"
            android:numStars="5"


            android:rating="1.6"



            />
        <TextView
            android:id="@+id/movieRatingValue"
            android:layout_width="0dp"
            android:text="@string/movie_detail_rating_value"
            android:textSize="16sp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            android:padding="5dp"
            android:background="@color/black"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="57dp" />
    </LinearLayout>

        </LinearLayout>




</LinearLayout>
